--- a/10th-fantasy.vcxproj
+++ b/10th-fantasy.vcxproj
@@ -136,6 +136,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\functions.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\functions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
