--- a/proj.win32/10th-fantasy.vcxproj.filters
+++ b/proj.win32/10th-fantasy.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="..\Classes\src\TitleScreen.cpp">
       <Filter>Source Files\Classes\src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Interface.cpp">
+      <Filter>Source Files\Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Z:\Classes\AppDelegate.h">
@@ -86,6 +89,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\include\Database.h">
       <Filter>Source Files\Classes\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Interface.h">
+      <Filter>Source Files\Classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
