add touch screen message when local datas found

--- a/proj.win32/10th-fantasy.vcxproj.filters
+++ b/proj.win32/10th-fantasy.vcxproj.filters
@@ -97,9 +97,12 @@
       <Filter>Source Files\Classes\include</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\BattleScene.h">
-    <Filter>Source Files\Classes</Filter>
+      <Filter>Source Files\Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\MainMenuScene.h">
+      <Filter>Source Files\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Interface.h">
       <Filter>Source Files\Classes</Filter>
     </ClInclude>
   </ItemGroup>
